istio/labs/hello_world_deployment_istio_ingress/0-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: learning
  labels:
    istio-injection: enabled
