istio/labs/hello_world_deployment_istio_ingress/3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-svc
  namespace: learning
  labels:
    app: helloworld
    service: helloworld
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: helloworld
