istio/labs/hello_world_deployment_istio_ingress/4-destinationrules.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: helloworld-dr
  namespace: istio-system
spec:
  host: "*"
  subsets:
    - name: v1
      labels:
        app: helloworld
        version: v1
    - name: v2
      labels:
        app: helloworld
        version: v2
